src/test/ui/impl-trait/issues/issue-54840.stderr
error[E0562]: `impl Trait` isn't allowed within variable binding
  --> $DIR/issue-54840.rs:5:13
   |
LL |     let j: &impl Add = &i;
   |             ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
